[package]
name = "test_ratatui"
version = "0.0.1"
edition = "2021"

[dependencies]
log = "0.4.0"
tracing = "0.1.40"
chrono = { version = "^0.4.20", default-features = false, features = ["clock"] }
ratatui = { version = "0.28", features = ["crossterm"] }
tracing-subscriber = { version = "0.3", optional = true }
lazy_static = "1.0"
fxhash = "0.2"
parking_lot = "0.12"
slog = { version = "2.7.0", optional = true }
tui-logger = { version = "0.13.2", features = ["crossterm"] }
anyhow = "1.0.79"
env_logger = "0.11.1"
crossterm = { version = "0.27" }
ferrisetw = { git = "https://github.com/gadol21/ferrisetw.git", branch = "expose-properties" }
sha1 = "0.10.6"
windows-core = "0.58.0"
clap = { version = "4.5.20", features = ["derive"] }
